删除消息和会话存储到后端